--- a/plataforma-comunicados/src/main/webapp/index.xhtml
+++ b/plataforma-comunicados/src/main/webapp/index.xhtml
@@ -53,7 +53,7 @@
         <h:form id="formRegister">
             <legend>Cadastrar no Comunica</legend>
             <h:outputLabel value="Nome:" for="nameRegister"> 
-                <h:inputText id="nameRegister" value="#{usuarioBean.nome}" title="name" required="true" 
+                <h:inputText id="nameRegister" value="#{usuarioBean.nome}" title="nome" required="true" 
                              requiredMessage="O campo nome deve ser preenchido"></h:inputText>
                 
             </h:outputLabel>
