Implementação da tela de perfil de aluno

--- a/src/main/webapp/feedComunicados.xhtml
+++ b/src/main/webapp/feedComunicados.xhtml
@@ -8,22 +8,17 @@
     <head>
         <title>Comunica - Feed de Notícias</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <link rel="stylesheet" type="text/css" href="css/feedProfessor.css"/>
+        <link rel="stylesheet" type="text/css" href="css/feedComunicados.css"/>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     </head>
     <body>
         <nav>
             <table id="sub_menu">
                 <tr>
-                    <td>
-                        <h:commandButton value="Página Inicial" class="menuHome"></h:commandButton>
-                    </td>
-                    <td>
-                        <h:commandButton value="Perfil" class="menuProfile"></h:commandButton>
-                    </td>
-                    <td>
-                        <h:commandButton value="Sair" class="menuExit"></h:commandButton>
-                    </td>
+                    <td> <h:commandButton value="Página Inicial" class="menuHome"></h:commandButton> </td>
+                    <td> <h:commandButton value="Perfil Aluno" class="menuProfile"></h:commandButton> </td>
+                    <td> <h:commandButton value="Sair" class="menuExit"></h:commandButton> </td>
+                    <td> <a href="perfilAluno.xhtml">Perfil Aluno</a> </td>
                 </tr>
             </table>
         </nav>
