--- a/src/main/webapp/feedComunicados.xhtml
+++ b/src/main/webapp/feedComunicados.xhtml
@@ -9,29 +9,34 @@
         <title>Comunica - Feed de Notícias</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" type="text/css" href="css/feedComunicados.css"/>
+        <link rel="stylesheet" type="text/css" href="css/menu.css"/>
+        <script src="js/fastclick.js"></script>
+        <script src="js/scroll.js"></script>
+        <script src="js/fixed-responsive-nav.js"></script>
+        <script src="js/responsive-nav.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     </head>
     <body>
-        <nav>
-            <table id="sub_menu">
-                <tr>
-                    <td> <h:commandButton value="Comunica" class="menuHome"></h:commandButton> </td>
-                    <td> <h:commandButton value="Perfil" class="menuProfile"></h:commandButton> </td>
-                    <td> <h:commandButton value="Sair" class="menuExit"></h:commandButton> </td>
-                </tr>
-            </table>
-        </nav>
-        
+
+        <header>
+            <nav class="nav-collapse">
+                <ul>
+                    <li><a href="feedComunicados.xhtml" class="menuHome"> Comunica</a></li>
+                    <li class="menu-item"><a href="perfilProfessor.xhtml" class="menuProfile"> Perfil </a></li>
+                    <li class="menu-item"><a href="#" class="menuExit">Sair</a></li>
+                </ul>
+            </nav>
+        </header>
         <!-- Area resservada para o professor inserir seu comunicado -->
         <div id="communicationArea">
             <p>Insira seu comunicado abaixo</p>
-                <textarea>
+            <textarea>
 
-                </textarea>
+            </textarea>
             <br/>
             <h:commandButton value="Publicar" class="buttonPublish"></h:commandButton>
         </div>
-        
+
         <!-- Area reservada para o comunicado que sera puxado do banco de dados -->
         <div id="communicationTeacher">
             <p id="nameTeacher">Marco Eugênio</p>
