--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -9,6 +9,11 @@
         <title>Comunica - Página Inicial</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" type="text/css" href="css/index.css"/>
+        <link rel="stylesheet" type="text/css" href="css/menu.css"/>
+        <script src="js/fastclick.js"></script>
+        <script src="js/scroll.js"></script>
+        <script src="js/fixed-responsive-nav.js"></script>
+        <script src="js/responsive-nav.js"></script> 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     </h:head>
     <h:body>
@@ -54,16 +59,16 @@
             });
         </script>
 
-         <nav>
-          <table id="sub_menu">
-                <tr>
-                    <td> <a href="index.xhtml" id="homecomunica">Comunica</a></td>
-                    <td class="firstLine"> <h:commandButton value="Cadastro" class="menuRegister"></h:commandButton> </td>
-                    <td> <h:commandButton value="Login" class="menuLogin"></h:commandButton> </td>
-                </tr> 
-            </table>
-        </nav>
-  
+        <header>
+            <nav class="nav-collapse">
+                <ul>
+                    <li><a href="index.xhtml" class="homecomunica">Comunica</a></li>
+                    <li class="menu-item"><a href="#formCadastro" class="menuRegister">Cadastro</a></li>
+                    <li class="menu-item"><a href="#formLogin" class="menuLogin">Login</a></li>
+                </ul>
+            </nav>
+        </header>
+       
         <!-- Formulario de login de usuario -->
         <h:form id="formLogin">
             <legend>Entrar no Comunica</legend>
