--- a/src/main/webapp/perfilAluno.xhtml
+++ b/src/main/webapp/perfilAluno.xhtml
@@ -13,18 +13,25 @@ and open the template in the editor.
         <title>Comunica - Perfil</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" type="text/css" href="css/perfilAluno.css"/>
+        <link rel="stylesheet" type="text/css" href="css/menu.css"/>
+        <script src="js/fastclick.js"></script>
+        <script src="js/scroll.js"></script>
+        <script src="js/fixed-responsive-nav.js"></script>
+        <script src="js/responsive-nav.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     </head>
     <body>
-        <nav>
-            <table id="sub_menu">
-                <tr>
-                    <td> <a href="feedComunicados.xhtml" class="menuHome"> Comunica</a> </td>
-                    <td> <a href="perfilAluno.xhtml" class="menuProfile"> Perfil </a> </td>
-                    <td> <h:commandButton value="Sair" class="menuExit"></h:commandButton> </td>
-                </tr>
-            </table>
-        </nav>
+
+        <header>
+            <nav class="nav-collapse">
+                <ul>
+                    <li><a href="feedComunicados.xhtml" class="menuHome"> Comunica</a></li>
+                    <li class="menu-item"><a href="perfilAluno.xhtml" class="menuProfile"> Perfil </a></li>
+                    <li class="menu-item"><a href="#" class="menuExit">Sair</a></li>
+                </ul>
+            </nav>
+        </header>
+
         <div>
             <!-- Dados referentes ao aluno cadastrado no sistema -->
             <div class="generalStudent">
@@ -35,7 +42,7 @@ and open the template in the editor.
                         <p id="profissaoAluno"> Estudante</p>
                     </div>
                 </div>
-                
+
                 <!-- Tags referentes aos tipos de comunicados que o aluno deseja ter acesso, as quais
                 o usuario informou anteriormente -->
                 <div class="globalTags">
@@ -47,7 +54,7 @@ and open the template in the editor.
                     </table>
                 </div>
             </div>
-            
+
             <!-- Caso o usuario deseje inserir uma nova tag -->
             <div>
                 <p>Deseja incluir uma nova tag? Insira abaixo</p>
