--- a/src/main/webapp/feedComunicados.xhtml
+++ b/src/main/webapp/feedComunicados.xhtml
@@ -42,10 +42,7 @@
             <p id="nameTeacher">Marco Eugênio</p>
             <p id="communicationPublished">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dignissim velit vel condimentum tristique.
-                Praesent tellus eros, tempus nec posuere sed, feugiat consequat leo. Nulla hendrerit lorem feugiat nisl
-                vulputate elementum. Aenean eget libero accumsan, dictum massa id, tincidunt ligula. Nulla facilisi. 
-                Cras imperdiet laoreet pretium. Praesent fringilla vel tortor sit amet varius. Ut id sapien neque. 
-                Nulla gravida sollicitudin est vel dictum. Nulla facilisi.
+                Praesent tellus eros, tempus nec posuere sed, feugiat consequat leo.
             </p>
             <table>
                 <tr>
