bug na tela de feed de comunicados resolvido

--- a/src/main/webapp/feedComunicados.xhtml
+++ b/src/main/webapp/feedComunicados.xhtml
@@ -43,6 +43,8 @@
             <p id="communicationPublished">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dignissim velit vel condimentum tristique.
                 Praesent tellus eros, tempus nec posuere sed, feugiat consequat leo.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dignissim velit vel condimentum tristique.
+                Praesent tellus eros, tempus nec posuere sed, feugiat consequat leo.
             </p>
             <table>
                 <tr>
